--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,10 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">
-                    <h3>Diego "Jusi" Sanchez</h3> 
-                    <p>Game Developer</p>
-                </a>
+                <a class="navbar-brand page-scroll" href="#page-top">Diego "Jusi" Sanchez</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
