--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -281,13 +281,13 @@ header {
 header .intro-text {
     padding-top: 100px;
     padding-bottom: 50px;
-    float: left;
+    float: right;
     width: 50%;
 }
 
 header .intro-text .intro-lead-in {
     margin-bottom: 25px;
-    float: left;
+    float: right;
     width: 50%;
     font-family: {{ site.data.template.font.secondary }};
     font-size: 22px;
