--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -21,7 +21,7 @@
                                     <strong>{{ post.project-date }}</strong>
                                 </li>
                                 <li>Itch.io Page:
-                                    <strong><a href="http://https://jusimito.itch.io">{{ post.category }}</a>
+                                    <strong><a href="https://jusimito.itch.io">{{ post.category }}</a>
                                     </strong>
                                 </li>
                             </ul>
