--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -20,7 +20,7 @@
                                 <li>Date:
                                     <strong>{{ post.project-date }}</strong>
                                 </li>
-                                <li>Itch.io Page:
+                                <li>Category:
                                     <strong><a href="https://jusimito.itch.io">{{ post.category }}</a>
                                     </strong>
                                 </li>
