--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,8 +2,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Ask me whatever you want :)</h3>
+                    <h2 class="section-heading">Contact me</h2>
+                    <h3 class="section-subheading">Ask me whatever you want :)</h3>
                 </div>
             </div>
             <div class="row">
