--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,7 +3,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact me</h2>
-                    <h3 class="section-heading">Ask me whatever you want :)</h3>
+                    <p class="section-heading">Ask me whatever you want :)</p>
                 </div>
             </div>
             <div class="row">
