--- a/_includes/links.html
+++ b/_includes/links.html
@@ -3,7 +3,23 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <a href="./directory/DiegoSanchezCV.pdf" download>Download my CV!</a>
+                    <h2 class="section-heading">Links</h2>
+                    <h3 class="section-subheading text-muted">Links that may be of your interest.</h3>
+                    <a href="./directory/DiegoSanchezCV.pdf" download>
+                        <button>Download my CV</button>
+                    </a>
+                    <div>                        
+                        <li>
+                            <a href="https://jusimito.itch.io">
+                                <img widht="200" height="200" src="./img/itch-io.png">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://jusi.artstation.com">
+                                <img widht="200" height="200" src="./img/artstation.webp">
+                            </a>
+                        </li>
+                    </div>
                 </div>
             </div>
         </div>
