--- a/_includes/links.html
+++ b/_includes/links.html
@@ -5,20 +5,22 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Links</h2>
                     <h3 class="section-subheading text-muted">Links that may be of your interest.</h3>
-                    <a href="./directory/DiegoSanchezCV.pdf" download>
-                        <button>Download my CV</button>
+                    <a href="./directory/CV_DiegoSanchezRamirez.pdf" download>
+                        <button class="btn btn-xl">Download my CV</button>
                     </a>
-                    <div>                        
-                        <li>
-                            <a href="https://jusimito.itch.io">
-                                <img widht="200" height="200" src="./img/itch-io.png">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://jusi.artstation.com">
-                                <img widht="200" height="200" src="./img/artstation.webp">
-                            </a>
-                        </li>
+                    <div>    
+                        <ul class="list-inline item-details">                    
+                            <li>
+                                <a href="https://jusimito.itch.io">
+                                    <img widht="100" height="100" src="./img/itch-io.png" target="_blank">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://jusi.artstation.com">
+                                    <img widht="100" height="100" src="./img/artstation.webp" target="_blank">
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
